메인레이아웃 완성된 척하지만 안되어있음 야호

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">KakaoTTS</string>
+    <string name="app_name">Hear Here</string>
     <string name="kakao_app_key">8c567e621f8b299ac26009306dd34f5c</string>
 </resources>
