--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Hear Here</string>
     <string name="kakao_app_key">8c567e621f8b299ac26009306dd34f5c</string>
+    <string name = "scanning">scanning for devices</string>
+    <string name = "select_device">select a device to connect</string>
+    <string name = "none_paired">No devices have been paired</string>
+    <string name = "none_found">No devices found</string>
+    <string name = "title_paired_devices">Paired Devices</string>
+    <string name = "title_other_devices">Other Available Devices</string>
+    <string name = "button_scan">Scan for devices</string>
 </resources>
